<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, AndroidLearnerActivity!</string>
    <string name="app_name">AndroidLearner</string>
    <string name="none_selected">none</string>
    <string name="choose_item">choose item</string>
    <string name="search">search</string>
    <string name="add_new">add</string>
    <string name="voice_recog_button">call it</string>
    <string name="add_ask">Is that what you want to remember?</string>
    <string name="add_item_menu_ok">save</string>
    <string name="add_item_menu_abort">abort</string>
    <string name="loading_object">loading object...</string>
    <string name="save_object">sending object information...</string>
    <string name="loading_error">error while loading item</string>
</resources>
